created route for book's deleting
