# docs/swagger.json
@@ -92,38 +92,6 @@
             }
         },
         "/private/books": {
-            "get": {
-                "description": "Get book by id",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Books"
-                ],
-                "summary": "Get book by id",
-                "parameters": [
-                    {
-                        "description": "Query parameters for books list",
-                        "name": "RequestBody",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.BooksQueryParams"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Book"
-                            }
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "CreateBook Book",
                 "produces": [
@@ -140,7 +108,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/forms.BookCreateForm"
+                            "$ref": "#/definitions/forms.BookForm"
                         }
                     }
                 ],
@@ -154,20 +122,20 @@
                 }
             }
         },
-        "/private/books/{id}": {
-            "get": {
-                "description": "GetBooksList",
+        "/private/books/delete": {
+            "put": {
+                "description": "DeleteBook Book",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Books"
                 ],
-                "summary": "GetBooksList",
+                "summary": "DeleteBook by id",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Book ID",
+                        "description": "book ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -177,7 +145,70 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Book"
+                            "$ref": "#/definitions/responses.StatusResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/private/books/update/{id}": {
+            "put": {
+                "description": "UpdateBook Book",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Books"
+                ],
+                "summary": "UpdateBook by id",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/forms.BookForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.StatusResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/private/books/{id}": {
+            "get": {
+                "description": "Get book by id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Books"
+                ],
+                "summary": "Get book by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "book ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Book"
+                            }
                         }
                     }
                 }
@@ -495,7 +526,7 @@
                 }
             }
         },
-        "forms.BookCreateForm": {
+        "forms.BookForm": {
             "type": "object",
             "required": [
                 "name"
@@ -675,21 +706,6 @@
                 }
             }
         },
-        "models.BooksQueryParams": {
-            "type": "object",
-            "properties": {
-                "orderBy": {
-                    "type": "string",
-                    "default": "createdAt desc"
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "perPage": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.FullProfileChartData": {
             "type": "object",
             "properties": {
@@ -715,6 +731,9 @@
                 "averageWordsPerDay": {
                     "type": "number"
                 },
+                "averageWordsPerReport": {
+                    "type": "number"
+                },
                 "bookId": {
                     "type": "string"
                 },
@@ -726,6 +745,9 @@
                 },
                 "daysRemaining": {
                     "type": "integer"
+                },
+                "estimatedEndDate": {
+                    "type": "string"
                 },
                 "goalId": {
                     "type": "string"
@@ -740,9 +762,6 @@
                     "type": "integer"
                 },
                 "totalWordsWritten": {
-                    "type": "number"
-                },
-                "trendComparedToTarget": {
                     "type": "number"
                 }
             }
@@ -962,6 +981,14 @@
         "models.UserStatistics": {
             "type": "object",
             "properties": {
+                "aboveAverageReportsRate": {
+                    "description": "AboveAverageReportsRate is the percentage of reports where the user wrote more words than the average report.",
+                    "type": "number"
+                },
+                "activityConsistencyRate": {
+                    "description": "ActivityConsistencyRate is the percentage of days with activity relative to the total number of days since the first report.",
+                    "type": "number"
+                },
                 "averageDaysToComplete": {
                     "type": "number"
                 },
@@ -975,9 +1002,19 @@
                     "type": "integer"
                 },
                 "currentStreak": {
+                    "description": "CurrentStreak is the current streak of consecutive days the user has written.",
                     "type": "integer"
                 },
+                "expiredGoalsCompletionRate": {
+                    "description": "ExpiredGoalsCompletionRate is the percentage of expired goals that have been completed.",
+                    "type": "number"
+                },
+                "goalCompletionRate": {
+                    "description": "GoalCompletionRate is the percentage of completed goals out of the total goals.",
+                    "type": "number"
+                },
                 "longestStreak": {
+                    "description": "LongestStreak is the longest streak of consecutive days the user has written.",
                     "type": "integer"
                 },
                 "maxWordsInDay": {
@@ -985,6 +1022,14 @@
                 },
                 "mostProductiveDay": {
                     "type": "string"
+                },
+                "overachievementRate": {
+                    "description": "OverachievementRate is the percentage of goals where the user has written more words than planned.",
+                    "type": "number"
+                },
+                "overallGoalProgressRate": {
+                    "description": "OverallGoalProgressRate is the percentage of goal progress based on written words and goal words.",
+                    "type": "number"
                 },
                 "totalBooks": {
                     "type": "integer"
@@ -1011,6 +1056,14 @@
             "properties": {
                 "id": {
                     "type": "string"
+                }
+            }
+        },
+        "responses.StatusResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "boolean"
                 }
             }
         },
